--- a/portfolio.html
+++ b/portfolio.html
@@ -63,17 +63,17 @@
         <h2>Amazon clone</h2><br>
         <p> I just made the frontend part of the Amazon homepage using HTML and CSS. </p>
         <p>As for the icons used in this project, I took them from Font Awesome.</p><br>
-        <p><a>github link href="mav01-code/amazon-clone"</a><br>
-        <img src="Amazon clone.jpg" alt="Amazon clone">
+        <p><a href="https://github.com/mav01-code/amazon-clone">Github link</a></p><br>
+        <img src="Amazon-Clone.png" alt="Amazon clone">
     </section>
     <section class="project">
         <h2>Tic-Tac-Toe game</h2><br>
         <p>In this project, I created a website and also an app for a basic tic-tac-toe game using HTML, CSS, JavaScript. </p>
         <p>You can checkout both of them by clicking on the following links :</p><br>
 
-        <p>Website <a>https://tictactoe-project.tiiny.site/</a></p>
+        <p> <a href="https://tictactoe-project.tiiny.site/">Website</a></p>
             
-        <p>App- <a>https://drive.google.com/file/d/1rGqbxX83V1wlAHUZkJNwleMWqiOr-gN1/view?usp=drive_link</a></p>
+        <p>App<a href="https://drive.google.com/file/d/1rGqbxX83V1wlAHUZkJNwleMWqiOr-gN1/view?usp=drive_link">Download</a></p>
         <br>
         <p>github- mav01-code/tic-tac-toe </p><br>
         <img src="Tic-Tac-Toe.webp" alt="Tic-Tac-Toe game">
