--- a/portfolio.html
+++ b/portfolio.html
@@ -73,9 +73,9 @@
 
         <a href="https://tictactoe-project.tiiny.site/">Website</a>
             
-        <p>App<a href="https://drive.google.com/file/d/1rGqbxX83V1wlAHUZkJNwleMWqiOr-gN1/view?usp=drive_link">Download</a></p>
+        <a href="https://drive.google.com/file/d/1rGqbxX83V1wlAHUZkJNwleMWqiOr-gN1/view?usp=drive_link">App</a>
         <br>
-        <a>github href="mav01-code/tic-tac-toe" </a><br>
+        <a href="mav01-code/tic-tac-toe">Github</a><br>
         <img src="Tic-Tac-Toe.webp" alt="Tic-Tac-Toe game">
     </section>
     <section class="project">
