--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
         <p>In this project, I created a website and also an app for a basic tic-tac-toe game using HTML, CSS, JavaScript. </p>
         <p>You can checkout both of them by clicking on the following links :</p><br>
 
-        <a href="https://tictactoe-project.tiiny.site/">Website</a>
+        <a href="https://tictactoe-project.tiiny.site/">Website</a><br>
             
         <a href="https://drive.google.com/file/d/1rGqbxX83V1wlAHUZkJNwleMWqiOr-gN1/view?usp=drive_link">App</a>
         <br>
